# Histoweave

./: .dockerignore  .gitattributes  .gitignore  .zenodo.json  ASSESSMENT_2026_07_12.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFECT_ANALYSIS.md  FUNCTIONAL_DEPTH_OPTIMIZATION.md  LANDSCAPE_PROGRESS.md  LICENSE  MATURITY_ROADMAP.md  NATURE_LEVEL_STRATEGY.md  PLATFORM_GAP_ANALYSIS.md  README.md  RELEASE_NOTES_v0.1.0.md  REVIEW_2026_07_11.md  REVIEW_2026_07_11_DEEP.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
5x10_dlpfc_benchmark/: benchmark_long.csv  experiment_5x10_dlpfc.py  figure_data.json  landscape.json  make_figures.py  manifest.json  performance_matrix_mean.csv  performance_matrix_std.csv  prepare_dlpfc.py  recommendation_loocv.csv  recommendation_loocv.json  report_5x10_dlpfc_benchmark.md  timings_mean.csv
5x15_spatial_aware/: SOTA_COMPARISON.md  benchmark_long.csv  build_sota_and_merge.py  dataset_features.csv  experiment_5x15.py  experiment_5x15_methods.py  figure_data.json  landscape.json  make_figures.py  make_heatmap.py  make_report.py  manifest.json  performance_matrix_mean.csv  performance_matrix_mean_full.csv  performance_matrix_std.csv  prepare_dlpfc.py  recommendation_loocv.csv  recommendation_loocv.json  report_5x15_spatial_aware.md  report_sota_5x20.md  run_bayesspace.R  run_method_slices.py  run_nnsvg.R  run_one_method.py  sota_benchmark_long.csv  sota_merge_manifest.json  sota_method_means.csv  sota_runner.py  svg_domain_pipeline.py  timings_mean.csv
7x15_cross_platform/: _prep_common.py  benchmark_long.csv  dataset_features.csv  experiment_7x15.py  figure_data.json  landscape.json  make_figures_7x15.py  manifest.json  performance_matrix_mean.csv  performance_matrix_std.csv  platform_topography.csv  platform_topography.json  prep_merfish.py  prep_slideseqv2.py  prep_xenium.py  recommendation_loocv.csv  recommendation_loocv.json  report_7x15_cross_platform.md  timings_mean.csv  topography_manifest.json
benchmark_cross_tissue/: README.md  experiment_7x19.py  prepare_allen_abc_sections.py  prepare_allen_mouse_brain.py  prepare_human_lymph_node.py
benchmark_crossplatform/: build_topography.py  experiment_7x15.py  make_platform_topography.py  prepare_merfish.py  prepare_merfish_brain.py  prepare_slideseqv2.py  prepare_xenium.py
benchmark_external_validation/: README.md  __init__.py  _xenium_pathology_common.py  benchmark_5x_external.json  benchmark_long.csv  bootstrap_ci.csv  dataset_manifest.json  decision_validation.json  evaluate_banksy_lymph.py  experiment_5x_external.py  make_figures.py  performance_matrix_mean.csv  performance_matrix_std.csv  prepare_allen_merfish_brain_section.py  prepare_visium_hd_crc.py  prepare_visium_mouse_brain.py  prepare_xenium_lung_cancer.py  prepare_xenium_ovarian_cancer.py  recommendation_loocv.csv  recommendation_loocv.json  recommender_loocv_external.py  report_external_validation.md
case_study_dlpfc_consistency/: build_uncertainty_case.py  prepare.py  report_case_study.md  run_case_study.py
conda-recipe/: README.md  conda_build_config.yaml  meta.yaml
docs/: COMPILER_GAPS.md  PR_STREAMS.md  active-calibration.md  api.md  architecture.md  benchmark-comparison-reviewer-response.md  case-study-intercepted-recommendation.md  code-of-conduct.md  compiler.md  concepts.md  contributing.md  decision-protocol.md  digital-twin.md  failure-fingerprints.md  faq.md  index.md  method-lifecycle.md  method-selection.md  multimodal-virtual-st.md  parallel-experiment-table.md  phenomenology-benchmark.md  quickstart.md  reference-artefacts.md  research-methods.md  roadmap.md  sota-reproduction.md  spatial-automl.md  statistical-review.md  troubleshooting.md  vs-squidpy-spatialdata.md
examples/: README.md  case_study_intercepted_recommendation.py  quickstart.py  tutorial_batch_correction.py  tutorial_custom_plugin.py  tutorial_real_visium.py  workshop_30min.ipynb
failure_boundary_mapping/: failure_boundary.py  make_figures.py  report_failure_boundary_mapping.md  run_failure_mapping.py
federation/: CONTRIBUTING_EVIDENCE.md  PROTOCOL.md
figure3_results/: benchmark_long.csv  dataset_features.csv  figure3_data.json  landscape.json  landscape_dlpfc_merged.json  manifest.json  performance_matrix.csv  recommendation_loocv.csv  recommendation_loocv.json  validation.json
independent_personalisation_results/: README.md  cross_lab_reproducibility.json  independent_personalisation_report.md  independent_personalisation_summary.json  independent_unit_landscape.json  personalisation_policies.json  real_independent_unit_landscape.json
leaderboard/: README.md  SUBMISSION.md  data.json  generate.py  index.html  main.js  styles.css
non_oracle_k_sota/: README.md  benchmark_long.csv  benchmark_long.json  dual_track_k.csv  dual_track_k.json  report_non_oracle_k_sota.md  run_non_oracle_k_sota.py  summary.json
parallel_experiment_table/: README.md  build_parallel_table.py  make_heatmap.py  method_meta.json  parallel_experiment_matrix.csv  parallel_experiment_summary.csv  parallel_experiment_table.csv  report_parallel_experiment.md
pareto_isus_results/: README.md  isus_calibration.json  isus_calibration_table.csv  pareto_report.json
plugin-template/: README.md  pyproject.toml
plugin-template/src/histoweave_myplugin/: __init__.py  method.py
protocol_endpoints_results/: README.md  multisource_landscape.json  oracle_k_leakage.json  pareto_stability.json  protocol_endpoints_report.md  protocol_endpoints_summary.json  selective_regret_coverage.json  sota_unified_resource.json  study_grouped_20_recommendation.json  study_grouped_20_report.md
reference_artefacts/: MANIFEST.json  README.md
scalability_proof/: complexity_fits.csv  report_scalability_proof.md  scaling_metrics.csv  scaling_summary.json
scripts/: __init__.py  _clean_unused_ignores.py  build_dlpfc_bundles.py  build_merged_landscape.py  build_reference_artefact_manifest.py  dlpfc_cell2location_reference.py  expand_real_independent_studies.py  generate_method_docs.py  prepare_visium_hne_virtual_st.py  (+4 more)
(+473 files in other folders)
