[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "histoweave-spatial"
description = "Open-source orchestration & evaluation platform for reproducible spatial transcriptomics analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "HistoWeave contributors" }]
keywords = [
    "spatial-transcriptomics",
    "bioinformatics",
    "scverse",
    "reproducibility",
    "benchmarking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "jinja2>=3.1",
    "packaging>=23",
    "scipy>=1.10",
    "spatialdata>=0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
spatial = [
    "anndata>=0.10",
    "spatialdata>=0.1",
    "spatialdata-io>=0.1",
    "geopandas>=0.14",
    "shapely>=2.0",
    "zarr>=2.16",
    "dask>=2024.1.0",
]
io = ["h5py>=3.7", "pyarrow>=14.0", "scipy>=1.10"]
scanpy = ["scanpy>=1.10", "scikit-learn>=1.3"]
banksy = ["banksy-py>=0.0.7"]
spatialde = ["anndata>=0.10", "SpatialDE==1.1.3"]
cell2location = ["anndata>=0.10", "cell2location>=0.1.4"]
liana = ["anndata>=0.10", "liana>=1.2"]
scanvi = ["anndata>=0.10", "scvi-tools>=1.3"]
celltypist = ["anndata>=0.10", "celltypist>=1.7"]
cellpose2 = ["cellpose>=2,<3"]
harmony = ["harmonypy>=0.0.9", "scikit-learn>=1.3"]
compiler = ["litellm>=1.40", "pydantic>=2.5"]
deep-learning = ["torch>=2.2"]
# Federated evidence network: Ed25519 signing/verification backend. `sigstore`
# is an optional keyless (OIDC) backend that is imported lazily and degrades
# gracefully when absent, so it is intentionally NOT a hard requirement here.
federation = ["cryptography>=42"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
dev = [
    "build>=1.2",
    "cryptography>=42",
    "h5py>=3.7",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "networkx>=3.0",
    "pandas-stubs>=2.0",
    "pyarrow>=14.0",
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "scanpy>=1.10",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "types-psutil>=5.9",
]
all = [
    "histoweave-spatial[io,spatial,scanpy,banksy,spatialde,cell2location,liana,scanvi,celltypist,cellpose2,harmony,compiler,deep-learning,federation,docs,dev]"
]

[project.scripts]
histoweave = "histoweave.cli:main"

[project.entry-points."histoweave.plugins"]
builtin = "histoweave.plugins.builtin:register_all"

[project.urls]
Homepage = "https://github.com/HERRY423/Histoweave"
Documentation = "https://HERRY423.github.io/Histoweave"
Repository = "https://github.com/HERRY423/Histoweave"
Issues = "https://github.com/HERRY423/Histoweave/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/histoweave"]

[tool.hatch.version]
path = "src/histoweave/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --basetemp=.pytest_tmp"
markers = [
    "property: property-based Hypothesis tests",
    "perf: micro-benchmarks used for performance regression gates",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "G"]

[tool.ruff.lint.per-file-ignores]
# Research runners embed report tables and protocol text whose exact layout is an output contract.
"research/**/*.py" = ["E501", "W291"]
"parallel_experiment_table/**/*.py" = ["E501"]
"src/histoweave/automl/report.py" = ["E501"]
"src/histoweave/benchmark/digital_twin_report.py" = ["E501"]
"src/histoweave/benchmark/protocol_endpoints.py" = ["E501"]
# Tutorial cells deliberately interleave setup and explanatory imports.
"examples/*.ipynb" = ["E402"]

# Type-checking policy (strengthened from the former follow_imports=skip /
# ignore_missing_imports=true defaults that hid many real errors):
# - follow_imports=silent: analyse our package fully; follow third-party imports
#   for signatures without reporting their internal errors
# - ignore_missing_imports=false globally; untyped science deps are overridden
# - check_untyped_defs catches bugs inside unannotated helpers
[tool.mypy]
python_version = "3.12"
follow_imports = "silent"
ignore_missing_imports = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
check_untyped_defs = true
no_implicit_optional = true
# Incomplete CLI handlers remain annotated at the return type only; enable
# disallow_incomplete_defs once argparse.Namespace typing is fully rolled out.
disallow_incomplete_defs = false
pretty = true
show_error_codes = true
exclude = "(?x)(^tests/|^site/|^tmp/)"

# Third-party scientific stack without complete py.typed / stub packages.
[[tool.mypy.overrides]]
module = [
    "spatialdata.*",
    "spatialdata_io.*",
    "anndata.*",
    "scipy.*",
    "sklearn.*",
    "squidpy.*",
    "networkx.*",
    "jinja2.*",
    "litellm.*",
    "pydantic.*",
    "torch.*",
    "SpaGCN.*",
    "GraphST.*",
    "scanpy.*",
    "harmonypy.*",
    "cell2location.*",
    "celltypist.*",
    "cellpose.*",
    "liana.*",
    "scvi.*",
    "SpatialDE.*",
    "NaiveDE.*",
    "louvain.*",
    "pyarrow.*",
    "h5py.*",
    "geopandas.*",
    "shapely.*",
    "shapely.geometry.*",
    "zarr.*",
    "dask.*",
    "numba.*",
]
ignore_missing_imports = true
